--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+remappings = [
+    "ds-test/=lib/pigeon/lib/forge-std/lib/ds-test/src/",
+    "forge-std/=lib/forge-std/src/",
+    "pigeon/=lib/pigeon/src/",
+    "solady/=lib/pigeon/lib/solady/",
+]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
